--- a/client/src/pages/CurvedConnectingLines.module.css
+++ b/client/src/pages/CurvedConnectingLines.module.css
@@ -4,3 +4,7 @@
 .duration-3500 {
   transition-duration: 3.5s;
 }
+@keyframes float {
+  0%, 100% { transform: translateY(0px) rotate(0deg); }
+  50% { transform: translateY(-20px) rotate(180deg); }
+}
